--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,9 +44,11 @@ dependencies:
   path_provider: ^2.0.10
   flutter_switch: ^0.3.2
   modal_progress_hud_nsn: ^0.2.1
+  cool_stepper: ^1.2.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.4
+  validation_extensions: ^1.0.1
 
 dev_dependencies:
   flutter_test:
