--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   path_provider: ^2.0.10
   flutter_switch: ^0.3.2
   modal_progress_hud_nsn: ^0.2.1
+  easy_image_viewer: ^1.0.4
+  paytm_allinonesdk: ^1.1.7
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.4
