--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^1.1.0
+  easy_image_viewer: ^1.0.4
   paginated_search_bar: ^1.1.2
   drop_down_list: ^0.0.2
   google_nav_bar: ^5.0.6
