--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_switch: ^0.3.2
   modal_progress_hud_nsn: ^0.2.1
   cool_stepper: ^1.2.1
+  fluttertoast: ^8.0.9
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.4
