--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   modal_progress_hud_nsn: ^0.2.1
   cool_stepper: ^1.2.1
   fluttertoast: ^8.0.9
+  firebase_storage: ^10.3.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.4
