--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.4
   validation_extensions: ^1.0.1
-
+  razorpay_flutter: ^1.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
